--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,4 +16,10 @@
     <color name="color_b2b2b2">#b2b2b2</color>
     <color name="color_c7c7c7">#c7c7c7</color>
     <color name="color_FF1DA1EA">#FF1DA1EA</color>
-    </resources>
+    <color name="color_a1a1a1">#a1a1a1</color>
+    <color name="color_f7f7f7">#f7f7f7</color>
+    <color name="color_242525">#242525</color>
+    <color name="color_4EACE8">#4EACE8</color>
+    <color name="color_3f51b5">#3f51b5</color>
+    <color name="color_101010">#101010</color>
+</resources>
