--- a/app/src/main/res/layout/base_action_bar.xml
+++ b/app/src/main/res/layout/base_action_bar.xml
@@ -24,22 +24,28 @@
                 android:visibility="visible" />
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="@dimen/dp_50"
             android:layout_marginRight="65dp">
 
-            <TextView
-                android:id="@+id/tv_title"
+            <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:text="首页"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:src="@mipmap/default_head" />
+
+            <TextView
+                android:id="@+id/tv_user_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:text="陈先生"
                 android:textColor="@color/black"
-                android:textSize="18sp" />
-        </RelativeLayout>
+                android:textSize="@dimen/sp_13" />
+        </LinearLayout>
 
 
         <RelativeLayout
@@ -65,20 +71,32 @@
                 android:textSize="16sp" />
         </RelativeLayout>
 
-        <RelativeLayout
+        <LinearLayout
             android:id="@+id/rl_scan"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="@dimen/dp_15">
+            android:layout_centerVertical="true">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/dp_5"
                 android:src="@mipmap/scan" />
-        </RelativeLayout>
+
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_marginRight="@dimen/dp_10"
+                android:text="@string/scan_scan"
+                android:textColor="@color/black"
+                android:textSize="@dimen/sp_13" />
+
+
+        </LinearLayout>
 
 
     </RelativeLayout>
