完成检测结果静态界面

--- a/app/src/main/res/drawable/button_shape.xml
+++ b/app/src/main/res/drawable/button_shape.xml
@@ -3,6 +3,6 @@
     android:shape="rectangle">
 
     <corners android:radius="@dimen/dp_3"></corners>
-    <solid android:color="@color/color_3f51b5"></solid>
+    <solid android:color="@color/color_12507E"></solid>
 
 </shape>
