--- a/app/src/main/res/layout/activity_forget_password.xml
+++ b/app/src/main/res/layout/activity_forget_password.xml
@@ -7,8 +7,7 @@
     android:orientation="vertical"
     tools:context=".user.view.register.ForgetPasswordActivity">
 
-    <include layout="@layout/base_action_bar"></include>
-
+    <include layout="@layout/base_title"></include>
 
     <TextView
         android:layout_width="wrap_content"
