--- a/app/src/main/res/layout/activity_local_server_details.xml
+++ b/app/src/main/res/layout/activity_local_server_details.xml
@@ -54,9 +54,8 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_marginLeft="@dimen/dp_10"
-                    android:text="iphone"
+                    android:text="10"
                     android:textColor="@color/color_101010" />
-
 
             </LinearLayout>
 
@@ -121,7 +120,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="@string/new_version"
+                        android:text="@string/version"
                         android:textColor="@color/color_242525"
                         android:textSize="@dimen/sp_11" />
 
@@ -211,7 +210,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="@string/new_version"
+                        android:text="@string/version"
                         android:textColor="@color/color_242525"
                         android:textSize="@dimen/sp_11" />
 
