--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,4 +22,17 @@
     <color name="color_4EACE8">#4EACE8</color>
     <color name="color_3f51b5">#3f51b5</color>
     <color name="color_101010">#101010</color>
+    <color name="color_fc1e3d">#fc1e3d</color>
+    <color name="clolor_CDC18D">#CDC18D</color>
+    <color name="color_102869">#102869</color>
+    <color name="color_9395A3">#9395A3</color>
+    <color name="color_2F3D45">#2F3D45</color>
+    <color name="color_12507E">#12507E</color>
+    <color name="color_292929">#292929</color>
+    <color name="color_F97319">#F97319</color>
+    <color name="color_34BCC6">#34BCC6</color>
+    <color name="color_9BD504">#9BD504</color>
+    <color name="color_86c2e8">#86c2e8</color>
+    <color name="color_OBCA4E">#FF42C253</color>
+    <color name="color_F45637">#F45637</color>
 </resources>
