--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -89,7 +89,8 @@
                 android:gravity="center"
                 android:text="@string/user_center"
                 android:textColor="@drawable/text_color_selector"
-                android:textSize="@dimen/sp_10" />
+                android:textSize="@dimen/sp_10"
+                android:visibility="gone" />
 
         </RadioGroup>
 
