--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,20 +7,15 @@
     android:orientation="vertical"
     tools:context=".user.view.register.RegisterActivity">
 
-    <ImageView
-        android:id="@+id/iv_logo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
-        android:src="@mipmap/login_log" />
+
+    <include layout="@layout/base_title"></include>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginLeft="@dimen/dp_30"
         android:layout_marginRight="@dimen/dp_30"
-        android:layout_marginTop="@dimen/dp_66">
+        android:layout_marginTop="@dimen/dp_30">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -36,7 +31,6 @@
             android:layout_marginLeft="@dimen/dp_15"
             android:background="@null"
             android:hint="@string/login_user_hint"
-            android:inputType="phone"
             android:textColor="@color/color_333333"
             android:textColorHint="#cecece"
             android:textSize="@dimen/sp_15" />
@@ -116,6 +110,99 @@
         android:layout_marginLeft="30dp"
         android:background="@color/color_e4e4e4"></View>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp">
+
+        <ImageView
+            android:layout_width="@dimen/dp_18"
+            android:layout_height="@dimen/dp_20"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/nickname" />
+
+        <EditText
+            android:id="@+id/et_nickname"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:background="@null"
+            android:hint="@string/please_input_nickname"
+            android:textColor="@color/color_333333"
+            android:textColorHint="#cecece"
+            android:textSize="15sp" />
+
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="30dp"
+        android:background="@color/color_e4e4e4"></View>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp">
+
+        <ImageView
+            android:layout_width="@dimen/dp_18"
+            android:layout_height="@dimen/dp_20"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/phone" />
+
+        <EditText
+            android:id="@+id/et_phone"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="15dp"
+            android:background="@null"
+            android:hint="@string/please_input_phone"
+            android:inputType="phone"
+            android:textColor="@color/color_333333"
+            android:textColorHint="#cecece"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="30dp"
+        android:background="@color/color_e4e4e4"></View>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="48dp"
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:gravity="center_vertical">
+
+        <ImageView
+            android:layout_width="@dimen/dp_18"
+            android:layout_height="@dimen/dp_20"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/company" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            android:text="深圳硅纳智慧"
+            android:textColor="@color/color_333333"
+            android:textColorHint="#cecece"
+            android:textSize="15sp" />
+
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="0.5dp"
+        android:layout_marginLeft="30dp"
+        android:background="@color/color_e4e4e4"></View>
 
     <Button
         android:id="@+id/btn_login"
@@ -127,7 +214,7 @@
         android:layout_marginRight="@dimen/dp_30"
         android:layout_marginTop="@dimen/dp_30"
         android:background="@drawable/login_shape"
-        android:text="注册"
+        android:text="@string/register"
         android:textColor="@color/white"
         android:textSize="16sp" />
 
