--- a/app/src/main/res/layout/activity_terminal_detail.xml
+++ b/app/src/main/res/layout/activity_terminal_detail.xml
@@ -242,7 +242,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
-                        android:text="@string/new_version"
+                        android:text="@string/version"
                         android:textColor="@color/color_242525"
                         android:textSize="@dimen/sp_12" />
 
