--- a/app/src/main/res/layout/activity_terminal_result_detail.xml
+++ b/app/src/main/res/layout/activity_terminal_result_detail.xml
@@ -10,12 +10,14 @@
     <include layout="@layout/base_title"></include>
 
     <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true"
         android:scrollbars="none">
 
         <LinearLayout
+
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
@@ -194,7 +196,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40"
-                android:background="@drawable/tab_shape">
+                android:background="@drawable/tab_shape"
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:layout_width="0dp"
@@ -278,12 +281,26 @@
 
             </LinearLayout>
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/dp_15"
+                android:descendantFocusability="blocksDescendants">
+
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rcy_chart_list"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+
+            </RelativeLayout>
+
             <com.sinano.weight.MyExpandableListView
                 android:id="@+id/el_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/dp_10"
-                android:background="@drawable/tab_list_shape">
+                android:background="@drawable/tab_list_shape"
+                android:visibility="gone">
 
             </com.sinano.weight.MyExpandableListView>
 
