--- a/app/src/main/res/layout/base_action_bar.xml
+++ b/app/src/main/res/layout/base_action_bar.xml
@@ -25,14 +25,15 @@
         </RelativeLayout>
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="65dp">
+            android:id="@+id/ll_user_center"
+            android:layout_width="@dimen/dp_150"
+            android:layout_height="match_parent"
+            android:layout_centerVertical="true">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:layout_marginLeft="@dimen/dp_15"
                 android:src="@mipmap/default_head" />
 
