--- a/app/src/main/res/layout/fragment_result.xml
+++ b/app/src/main/res/layout/fragment_result.xml
@@ -158,8 +158,195 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_30"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:text="@string/check_part_list"
+                    android:textColor="@color/color_292929" />
+
+                <RelativeLayout
+                    android:visibility="gone"
+                    android:id="@+id/rl_part_up_page"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:background="@drawable/button_shape">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="上一页"
+                        android:textColor="@color/white" />
+
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/tv_part_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:text="1/4"
+                    android:textColor="@color/color_242525" />
+
+                <RelativeLayout
+                    android:id="@+id/rl_part_next_page"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:background="@drawable/button_shape">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="下一页"
+                        android:textColor="@color/white" />
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/chart_result_part"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_200"></com.github.mikephil.charting.charts.BarChart>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_30"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:text="@string/project_check_preview"
+                    android:textColor="@color/color_292929" />
+
+                <RelativeLayout
+                    android:visibility="gone"
+                    android:id="@+id/rl_project_up_page"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:background="@drawable/button_shape">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="上一页"
+                        android:textColor="@color/white" />
+
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/tv_project_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:text="1/4"
+                    android:textColor="@color/color_242525" />
+
+                <RelativeLayout
+                    android:id="@+id/rl_project_next_page"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:background="@drawable/button_shape">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="下一页"
+                        android:textColor="@color/white" />
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/chart_result"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_200"></com.github.mikephil.charting.charts.BarChart>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_30"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:text="@string/device_check_result_preview"
+                    android:textColor="@color/color_292929" />
+
+                <RelativeLayout
+                    android:visibility="gone"
+                    android:id="@+id/rl_device_up_page"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:background="@drawable/button_shape">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="上一页"
+                        android:textColor="@color/white" />
+
+                </RelativeLayout>
+
+                <TextView
+                    android:id="@+id/tv_device_page"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:text="1/4"
+                    android:textColor="@color/color_242525" />
+
+                <RelativeLayout
+                    android:id="@+id/rl_device_next_page"
+                    android:layout_width="@dimen/dp_50"
+                    android:layout_height="@dimen/dp_20"
+                    android:layout_marginLeft="@dimen/dp_5"
+                    android:background="@drawable/button_shape">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerInParent="true"
+                        android:text="下一页"
+                        android:textColor="@color/white" />
+
+                </RelativeLayout>
+
+
+            </LinearLayout>
+
+            <com.github.mikephil.charting.charts.BarChart
+                android:id="@+id/chart_result_device"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/dp_200"></com.github.mikephil.charting.charts.BarChart>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/dp_40"
-                android:background="@drawable/tab_shape">
+                android:background="@drawable/tab_shape"
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:layout_width="0dp"
@@ -228,7 +415,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/dp_10"
-                android:background="@drawable/tab_list_shape"></android.support.v7.widget.RecyclerView>
+                android:background="@drawable/tab_list_shape"
+                android:visibility="gone"></android.support.v7.widget.RecyclerView>
 
             <TextView
                 android:layout_width="wrap_content"
@@ -236,12 +424,14 @@
                 android:layout_marginLeft="@dimen/dp_10"
                 android:text="@string/device_list"
                 android:textColor="@color/contents_text"
-                android:textSize="@dimen/sp_15" />
+                android:textSize="@dimen/sp_15"
+                android:visibility="gone" />
 
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/rcy_device_list"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"></android.support.v7.widget.RecyclerView>
+                android:layout_height="wrap_content"
+                android:visibility="gone"></android.support.v7.widget.RecyclerView>
 
 
         </LinearLayout>
